# gw-foutstep

./: .gitignore  LICENSE.md  README.md  example.py  foutstep.py  pyproject.toml
.github/workflows/: python-publish.yml  run-example.yml
src/foutstep/: stepdft.py
